# toerings

./: .eslintrc.cjs  .prettierignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.svelte  main.ts  style.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: data_harvester.rs  main.rs
src-tauri/src/data_harvester/: cpu.rs  disks.rs  network.rs  processes.rs  temperature.rs
src-tauri/src/data_harvester/batteries/: battery.rs
src-tauri/src/data_harvester/cpu/: heim.rs  sysinfo.rs
src-tauri/src/data_harvester/cpu/heim/: linux.rs  unix.rs  windows_macos.rs
src-tauri/src/data_harvester/disks/: freebsd.rs  heim.rs
src-tauri/src/data_harvester/memory/: general.rs
src-tauri/src/data_harvester/memory/general/: heim.rs
src-tauri/src/data_harvester/network/: heim.rs  sysinfo.rs
src-tauri/src/data_harvester/processes/: freebsd.rs  linux.rs  macos.rs  macos_freebsd.rs  unix.rs  windows.rs
src-tauri/src/data_harvester/temperature/: linux.rs  nvidia.rs  sysinfo.rs
src-tauri/src/utils/: error.rs  logging.rs
src/components/: Arc.svelte  ArcStack.svelte  ArcWidget.svelte  CPUWidget.svelte  DiskWidget.svelte  MemWidget.svelte  NetWidget.svelte  Preferences.svelte  ProcessList.svelte  SummaryWidget.svelte
src/lib/: actions.ts  stores.ts  utils.ts
