[package]
name = "toerings"
version = "0.0.0"
description = "A spiritual port of Conky SeaMod to Tauri."
authors = ["Andrew Carlson <2yinyang2@gmail.com>"]
license = "MIT"
repository = "https://github.com/acarl005/toerings"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_millis = "0.1.1"
tauri = { version = "1.2", features = ["macos-private-api", "shell-open", "window-set-size", "window-start-dragging"] }
sysinfo = "0.27.7"
anyhow = "1.0.68"
backtrace = "0.3.67"
cfg-if = "1.0.0"
futures = "0.3.25"
futures-timer = "3.0.2"
fxhash = "0.2.1"
once_cell = "1.17.0"
itertools = "0.10.5"
thiserror = "1.0.38"
humantime = "2.1.0"
humantime-serde = "1.1.1"
local-ip-address = "0.5.1"
time = { version = "0.3.9", features = ["formatting", "macros"] }
fern = { version = "0.6.1", optional = true }
log = { version = "0.4.17", optional = true }
starship-battery = { version = "0.7.9", optional = true }
nvml-wrapper = { version = "0.8.0", optional = true }


[target.'cfg(unix)'.dependencies]
libc = "0.2.139"

[target.'cfg(target_os = "linux")'.dependencies]
heim = { git = "https://github.com/heim-rs/heim", features = ["cpu", "disk", "memory", "net", "sensors"] }
procfs = { version = "0.14.2", default-features = false }
smol = "1.2.5"

[target.'cfg(target_os = "macos")'.dependencies]
heim = { git = "https://github.com/heim-rs/heim", features = ["cpu", "disk", "memory", "net"] }
mach2 = "0.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
heim = { git = "https://github.com/heim-rs/heim", features = ["cpu", "disk", "memory"] }
windows = { version = "0.44.0", features = ["Win32_System_Threading", "Win32_Foundation"] }
winapi = "0.3.9"

[target.'cfg(target_os = "freebsd")'.dependencies]
serde_json = { version = "1.0.82" }
sysctl = { version = "0.5.2", optional = true }
filedescriptor = "0.8.2"

[features]
battery = ["starship-battery"]
gpu = ["nvidia"]
nvidia = ["nvml-wrapper"]
zfs = ["sysctl"]

# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "fern", "log"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
